--- a/_config.yml
+++ b/_config.yml
@@ -2,11 +2,11 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: Jiang Yuhua's Homepage # the website title (if blank, full name will be used instead)
+title: Yuhua Jiang's Homepage # the website title (if blank, full name will be used instead)
 first_name: Yuhua
 middle_name: 
 last_name: Jiang
-email: jyh@smail.nju.edu.cn
+email: jiangyh22@mails.tsinghua.edu.cn
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
