--- a/_config.yml
+++ b/_config.yml
@@ -184,8 +184,8 @@ jekyll-archives:
 
 scholar:
 
-  last_name: Einstein
-  first_name: [Albert, A.]
+  last_name: Jiang
+  first_name: [Yuhua, Y.]
 
   style: apa
   locale: en
