--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ footer_text: >
 keywords: jekyll, jekyll-theme, academic-website, portfolio-website  # add your own keywords or leave empty
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: 😎  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: /assets/img/jyh_2023_2.jpeg  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://jackory.github.io # the base hostname & protocol for your site
 baseurl:  # the subpath of your site, e.g. /blog/
@@ -59,7 +59,7 @@ github_username: Jackory # your GitHub user name
 gitlab_username:  # your GitLab user name
 twitter_username: # your Twitter handle
 linkedin_username:  # your LinkedIn user name
-scholar_userid:  # your Google Scholar ID
+scholar_userid:  rCYHHUYAAAAJ # your Google Scholar ID
 orcid_id: # your ORCID ID
 medium_username: # your Medium username
 quora_username: # your Quora username
